@@ -52,7 +52,7 @@ public:
 
    // Activated associated Branches and link it to the private member DetectorData address
    // In this method mother Branches (Detector) AND daughter leaf (fDetector_parameter) have to be activated
-   void InitializeRootInput();
+   void InitializeRootInputRaw();
 
    // Create associated branches and associated private member DetectorPhysics address
    void InitializeRootOutput();
